-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Fully Compatible
-
ALL
-
Security 2021-10-04
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Unchecked return value
If the function returns an error value, the error value may be mistaken for a normal value. Value returned from a function is not checked for errors before being used
/src/mongo/util/net/ssl_manager_openssl.cpp:3512: CHECKED_RETURN 120792 Calling "X509_digest" without checking return value (as is done elsewhere 1 out of 2 times).