SERVER-60147 analyze result of X509_digest